# tootlogger

./: .gitattributes  .gitignore  LICENCE.txt  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  config.toml.example  justfile  pyproject.toml  pyrightconfig.json  renovate.json  setup.cfg  setup.py  template.jinja2  toot_to_dayone.py  tootlogger.toml.example
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
tests/: test_cli.py
toot_logger/: __init__.py  _version.py  cli.py  main.py
toot_logger/templates/: template.jinja2
tootlogger/: _version.py  cli.py
tootlogger/templates/: template.jinja2
