[metadata]
name = toot_logger
author = Amy Aronsohn
description = Log your Mastodon toots to DayOne
version = 0.2.0
url = https://onlyhavecans.works/amy/toot_logger
keywords =
    mastodon
    social networking
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: Other/Proprietary License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Topic :: Utilities
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.6
    pip >= 10
    twine >= 1.11
include_package_data = True
packages = find:
install_requires =
    html2text
    jinja2
    mastodon.py
    toml

[options.extras_require]
tests =
    pytest
    flake8

[options.entry_points]
console_scripts =
    toot_logger = toot_logger.cli:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
