[metadata]
name = tootlogger
author = Amy Aronsohn
author_email = "WagThatTail@Me.com"
description = Log your Mastodon toots to DayOne
url = "https://onlyhavecans.works/amy/tootlogger"
keywords =
    mastodon
    social networking
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: Other/Proprietary License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Topic :: Utilities
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.6
    pip >= 10
    twine >= 1.11
include_package_data = True
packages = find:
install_requires =
    html2text
    jinja2
    mastodon.py
    toml

[options.extras_require]
tests =
    pytest
    flake8

[options.entry_points]
console_scripts =
    tootlogger = tootlogger.cli:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/

[versioneer]
VCS = git
style = pep440
versionfile_source = tootlogger/_version.py
versionfile_build = None
tag_prefix =
parentdir_prefix =
